--- a/Bludiste/Web/WebowkaHra.html
+++ b/Bludiste/Web/WebowkaHra.html
@@ -40,7 +40,19 @@
     </script>
 </head>
 <body>
-    <iframe src="header.html" width="100%" height="100%" frameborder="0" scrolling="no" sandbox="allow-popups"></iframe>
+    <header>
+        <h1>Bludiště hra</h1>
+        <nav>
+            <div class="hamburger" onclick="toggleMenu()">☰</div>
+            <ul>
+                <li><a href="hrat.html" onclick="checkAccess('play')">Hrát</a></li>
+                <li><a href="prihlaseni.html">Přihlášení</a></li>
+                <li><a href="registrace.html">Registrace</a></li>
+                <li><a href="o_hre.html">O hře</a></li>
+                <li><a href="scoreboard.html">Scoreboard</a></li>
+            </ul>
+        </nav>
+    </header>
     
     <main>         
     <!-- Obsah stránek bude záležet na odkazech výše -->
