--- a/Bludiste/Web/scoreboard.html
+++ b/Bludiste/Web/scoreboard.html
@@ -7,7 +7,19 @@
 </head>
 <body>
     <h2>Scoreboard</h2>
-    <iframe src="header.html" width="100%" height="100%" frameborder="0" scrolling="yes"></iframe>
+    <header>
+        <h1>Bludiště hra</h1>
+        <nav>
+            <div class="hamburger" onclick="toggleMenu()">☰</div>
+            <ul>
+                <li><a href="hrat.html" onclick="checkAccess('play')">Hrát</a></li>
+                <li><a href="prihlaseni.html">Přihlášení</a></li>
+                <li><a href="registrace.html">Registrace</a></li>
+                <li><a href="o_hre.html">O hře</a></li>
+                <li><a href="scoreboard.html">Scoreboard</a></li>
+            </ul>
+        </nav>
+    </header>
     <table>
         <tr>
             <th>Pořadí</th>
