--- a/Bludiste/Web/o_hre.html
+++ b/Bludiste/Web/o_hre.html
@@ -6,7 +6,19 @@
     <title>O hře</title>
 </head>
 <body>
-    <iframe src="header.html" width="100%" height="100%" frameborder="0" scrolling="no"></iframe>
+    <header>
+        <h1>Bludiště hra</h1>
+        <nav>
+            <div class="hamburger" onclick="toggleMenu()">☰</div>
+            <ul>
+                <li><a href="hrat.html" onclick="checkAccess('play')">Hrát</a></li>
+                <li><a href="prihlaseni.html">Přihlášení</a></li>
+                <li><a href="registrace.html">Registrace</a></li>
+                <li><a href="o_hre.html">O hře</a></li>
+                <li><a href="scoreboard.html">Scoreboard</a></li>
+            </ul>
+        </nav>
+    </header>
     <h2>O programu</h2>
     <p>Hra s více levely, ve které procházíte bludištěm a snažíte se za nejlepší čas dostat do cíle.</p>
     <h3>Funkce:</h3>
