--- a/Bludiste/Web/prihlaseni.html
+++ b/Bludiste/Web/prihlaseni.html
@@ -6,7 +6,19 @@
     <title>Přihlášení</title>
 </head>
 <body>
-    <iframe src="header.html" width="100%" height="100%" frameborder="0" scrolling="no"></iframe>
+    <header>
+        <h1>Bludiště hra</h1>
+        <nav>
+            <div class="hamburger" onclick="toggleMenu()">☰</div>
+            <ul>
+                <li><a href="hrat.html" onclick="checkAccess('play')">Hrát</a></li>
+                <li><a href="prihlaseni.html">Přihlášení</a></li>
+                <li><a href="registrace.html">Registrace</a></li>
+                <li><a href="o_hre.html">O hře</a></li>
+                <li><a href="scoreboard.html">Scoreboard</a></li>
+            </ul>
+        </nav>
+    </header>
     <form action="/prihlaseni" method="POST">
         <h2>Přihlášení</h2>
         <label for="username">Uživatelské jméno:</label>
