--- a/Bludiste/Web/registrace.html
+++ b/Bludiste/Web/registrace.html
@@ -6,7 +6,19 @@
     <title>Registrace</title>
 </head>
 <body>
-    <iframe src="header.html" width="100%" height="100%" frameborder="0" scrolling="no"></iframe>n="/registrace" method="POST">
+    <header>
+        <h1>Bludiště hra</h1>
+        <nav>
+            <div class="hamburger" onclick="toggleMenu()">☰</div>
+            <ul>
+                <li><a href="hrat.html" onclick="checkAccess('play')">Hrát</a></li>
+                <li><a href="prihlaseni.html">Přihlášení</a></li>
+                <li><a href="registrace.html">Registrace</a></li>
+                <li><a href="o_hre.html">O hře</a></li>
+                <li><a href="scoreboard.html">Scoreboard</a></li>
+            </ul>
+        </nav>
+    </header>
         <h2>Registrace</h2>
         <label for="username">Uživatelské jméno:</label>
         <input type="text" id="username" name="username" required>
